--- a/_cases/2023/DIVD-2023-00025.md
+++ b/_cases/2023/DIVD-2023-00025.md
@@ -32,10 +32,10 @@ timeline:
   event: "Time to acknowledge"
 - start: 2023-02-17
   end:
-  event: "Vendor acknowledges receipt of vulnerabilities"
+  event: "Vendor acknowledges receipt of vulnerabilities."
 - start: 2023-08-17
   end:
-  event: "Limited disclosure of the AK-SM800A vulnerabilities"
+  event: "Limited disclosure of the AK-SM800A vulnerabilities, including later mentioned vulnerabilities."
 - start: 2023-08-17
   end:
   event: "DIVD starts scanning the internet for vulnerable instances."
