--- a/_cases/2023/DIVD-2023-00033.md
+++ b/_cases/2023/DIVD-2023-00033.md
@@ -39,7 +39,7 @@ timeline:
   event: "DIVD starts cooperation with various Government CERTs."
 - start: 2023-08-15
   end:
-  event: "NCC group publishes blog post on found webshells."
+  event: "Fox-IT publishes blog post on found webshells."
 - start: 2023-08-16
   end:
   event: "DIVD starts collaboration with Shadowserver on data sharing."
