--- a/_cases/2023/DIVD-2023-00034.md
+++ b/_cases/2023/DIVD-2023-00034.md
@@ -34,7 +34,7 @@ A vulnerability has been discovered in Ivanti Sentry, formerly MobileIron Sentry
 
 ## Recommendations
 
-Limit access to port 8443 on the administrator portal (known as MICS) and install the Ivanti-provided RPM scripts to mitigate the problem.
+Limit access to port 8443 on the administrator portal (known as MICS, MobileIron Configuration Service) and install the Ivanti-provided RPM scripts to mitigate the problem.
 
 ## What we are doing
 
