--- a/_cases/2023/DIVD-2023-00035.md
+++ b/_cases/2023/DIVD-2023-00035.md
@@ -7,6 +7,7 @@ lead: Max van der Horst
 researchers:
 - Victor Pasman
 - Alwin Warringa
+- Kaj Koole
 - Max van der Horst
 cves:
 - CVE-2023-36844
@@ -36,7 +37,7 @@ timeline:
 - start: 2023-09-11
   end:
   event: "DIVD starts scanning for this vulnerability."
-- start: 2023-08-22
+- start: 2023-09-11
   end:
   event: "First version of this casefile."
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
