--- a/_cases/2023/DIVD-2023-00035.md
+++ b/_cases/2023/DIVD-2023-00035.md
@@ -20,13 +20,13 @@ product:
 - Junos OS
 versions: 
 - All versions before 20.4R3-S8
-- * 21.2 versions prior to 21.2R3-S6
-- * 21.3 versions prior to 21.3R3-S5
-- * 21.4 versions prior to 21.4R3-S5
-- * 22.1 versions prior to 22.1R3-S3
-- * 22.2 versions prior to 22.2R3-S2
-- * 22.3 versions prior to 22.3R2-S2, 22.3R3
-- * 22.4 versions prior to 22.4R2-S1, 22.4R3.
+- 21.2 versions prior to 21.2R3-S6
+- 21.3 versions prior to 21.3R3-S5
+- 21.4 versions prior to 21.4R3-S5
+- 22.1 versions prior to 22.1R3-S3
+- 22.2 versions prior to 22.2R3-S2
+- 22.3 versions prior to 22.3R2-S2, 22.3R3
+- 22.4 versions prior to 22.4R2-S1, 22.4R3.
 recommendation: Upgrade by installing the issued patch as soon as possible.
 patch_status: Mitigated
 workaround: Disable J-Web or limit access to trusted devices.
