--- a/_cases/2023/DIVD-2023-00035.md
+++ b/_cases/2023/DIVD-2023-00035.md
@@ -14,6 +14,7 @@ cves:
 - CVE-2023-36845
 - CVE-2023-36846
 - CVE-2023-36847
+- CVE-2023-36851
 product: 
 - Juniper Networks SRX-Series
 - Juniper Networks EX-Series
@@ -40,15 +41,21 @@ timeline:
 - start: 2023-09-11
   end:
   event: "First version of this casefile."
+- start: 2023-09-11
+  end:
+  event: "DIVD starts researching fingerprint"
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
 
-Multiple vulnerabilities have been discovered in Juniper Networks SRX- and EX-Series. By chaining these vulnerabilities, an unauthenticated attacker can achieve Remote Command Execution and compromise the underlying operating system. Juniper urges everyone to upgrade to the patched versions as soon as possible. 
+Multiple vulnerabilities have been discovered in Juniper Networks SRX- and EX-Series. By chaining these vulnerabilities, an unauthenticated attacker can achieve Remote Command Execution (RCE) and compromise the underlying operating system. Juniper urges everyone to upgrade to the patched versions as soon as possible. 
 
 ## Recommendations
 
-Juniper has released a patch for all affected versions and urges users to install it as soon as possible. If this is not an option, disable J-Web or limit access to trusted devices.
+To prevent remote code execution (RCE), only one PR needs to be fixed per platform.
+- For EX Series, the following releases have resolved this via PR 1735387: 20.4R3-S8, 21.2R3-S6, 21.3R3-S5*, 21.4R3-S4, 22.1R3-S3, 22.2R3-S1, 22.3R2-S2, 22.3R3, 22.4R2-S1, 22.4R3*, 23.2R1, and all subsequent releases.
+- For SRX Series, the following releases have resolved this via PR 1736942: 20.4R3-S9*, 21.2R3-S7*, 21.3R3-S5*, 21.4R3-S5*, 22.1R3-S4*, 22.2R3-S2*, 22.3R2-S2, 22.3R3-S1*, 22.4R2-S1, 22.4R3*, 23.2R1-S1*, 23.2R2*, 23.4R1*, and all subsequent releases.
+If this is not an option, disable J-Web or limit access to trusted devices.
 
 ## What we are doing
 
