--- a/_cases/2023/DIVD-2023-00035.md
+++ b/_cases/2023/DIVD-2023-00035.md
@@ -3,7 +3,7 @@ layout: case
 title: Remote Code Execution in Juniper Networks SRX- and EX-Series
 excerpt: "A PHP External Variable Modification vulnerability in J-Web of Juniper Networks Junos OS on SRX and EX Series allows an unauthenticated, network-based attacker to control certain, important environments variables."
 author: Max van der Horst
-lead: Max van der Horst
+lead: Alwin Warringa
 researchers:
 - Victor Pasman
 - Alwin Warringa
