--- a/_cases/2023/DIVD-2023-00035.md
+++ b/_cases/2023/DIVD-2023-00035.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 title: Remote Code Execution in Juniper Networks SRX- and EX-Series
-excerpt: "A PHP External Variable Modification vulnerability in J-Web of Juniper Networks Junos OS on SRX and EX Series allows an unauthenticated, network-based attacker to control certain, important environments variables."
+excerpt: "By chaining multiple vulnerabilities is an attacker allowed to execute arbitrary code or commands via specifically crafted requests."
 author: Max van der Horst
 lead: Alwin Warringa
 researchers:
@@ -52,7 +52,7 @@ Multiple vulnerabilities have been discovered in Juniper Networks SRX- and EX-Se
 
 ## Recommendations
 
-To prevent remote code execution (RCE), only one PR needs to be fixed per platform.
+Juniper has released a patch for all affected versions and urges users to install it as soon as possible. If this is not an option, disable J-Web or limit access to trusted devices.
 - For EX Series, the following releases have resolved this via PR 1735387: 20.4R3-S8, 21.2R3-S6, 21.3R3-S5*, 21.4R3-S4, 22.1R3-S3, 22.2R3-S1, 22.3R2-S2, 22.3R3, 22.4R2-S1, 22.4R3*, 23.2R1, and all subsequent releases.
 - For SRX Series, the following releases have resolved this via PR 1736942: 20.4R3-S9*, 21.2R3-S7*, 21.3R3-S5*, 21.4R3-S5*, 22.1R3-S4*, 22.2R3-S2*, 22.3R2-S2, 22.3R3-S1*, 22.4R2-S1, 22.4R3*, 23.2R1-S1*, 23.2R2*, 23.4R1*, and all subsequent releases.
 If this is not an option, disable J-Web or limit access to trusted devices.
