--- a/_cases/2023/DIVD-2023-00035.md
+++ b/_cases/2023/DIVD-2023-00035.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 title: Remote Code Execution in Juniper Networks SRX- and EX-Series
-excerpt: "By chaining multiple vulnerabilities is an attacker allowed to execute arbitrary code or commands via specifically crafted requests."
+excerpt: "By chaining multiple vulnerabilities an attacker is able to execute arbitrary code or commands via specifically crafted requests."
 author: Max van der Horst
 lead: Alwin Warringa
 researchers:
