--- a/_cases/2023/DIVD-2023-00035.md
+++ b/_cases/2023/DIVD-2023-00035.md
@@ -29,7 +29,7 @@ versions:
 - 22.3 versions prior to 22.3R2-S2, 22.3R3
 - 22.4 versions prior to 22.4R2-S1, 22.4R3.
 recommendation: Upgrade by installing the issued patch as soon as possible.
-patch_status: Mitigated
+patch_status: patches available
 workaround: Disable J-Web or limit access to trusted devices.
 status : Open
 start: 2023-09-11
