Close Ivanti Sentry

--- a/_cases/2023/DIVD-2023-00034.md
+++ b/_cases/2023/DIVD-2023-00034.md
@@ -16,9 +16,9 @@ versions:
 recommendation: Limit access to port 8443 and install the RPM scripts given in Ivanti's Security Advisory.
 patch_status: Mitigated
 #workaround: n/a
-status : Open
+status : Closed
 start: 2023-08-22
-end: 
+end: 2023-09-26
 timeline:
 - start: 2023-08-22
   end:
@@ -26,7 +26,20 @@ timeline:
 - start: 2023-08-22
   end:
   event: "First version of this casefile."
+- start: 2023-08-23
+  end:
+  event: "First round of notifications sent."
+- start: 2023-09-02
+  end:
+  event: "Second round of notificaitons sent."
+- start: 2023-09-03
+  end:
+  event: "DIVD monitors decrease of vulnerable hosts."
+- start: 2023-09-26
+  end:
+  event: "Case closed."
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
+ips: 3825
 ---
 ## Summary
 
