Close cases 17, 24, 31 and 33

--- a/_cases/2023/DIVD-2023-00031.md
+++ b/_cases/2023/DIVD-2023-00031.md
@@ -17,9 +17,9 @@ versions:
 recommendation: Update your system to the latest patched version
 patch_status: Fully patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2023-07-25
-end: 
+end: 2023-09-26
 timeline:
 - start: 2022-07-25
   end:
@@ -30,7 +30,11 @@ timeline:
 - start: 2023-07-26
   end:
   event: "DIVD is notifying through notification partners"  
+- start: 2023-09-26
+  end:
+  event: "DIVD decides to close case after monitoring phase."  
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
+ips: 1029
 ---
 ## Summary
 
