--- a/_cases/2023/DIVD-2023-00033.md
+++ b/_cases/2023/DIVD-2023-00033.md
@@ -21,9 +21,9 @@ versions:
 recommendation: Update your system to the latest patched version
 patch_status: Fully patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2023-07-18
-end: 
+end: 2023-09-26
 timeline:
 - start: 2023-07-18
   end:
@@ -43,8 +43,12 @@ timeline:
 - start: 2023-08-16
   end:
   event: "DIVD starts collaboration with Shadowserver on data sharing."
+- start: 2023-09-26
+  end:
+  event: "DIVD decides to close case after monitoring."
 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
+ips: 2497
 ---
 ## Summary
 
