--- a/_cases/2023/DIVD-2023-00029.md
+++ b/_cases/2023/DIVD-2023-00029.md
@@ -4,7 +4,7 @@ title: "Critical Fortinet SSL-VPN RCE Vulnerability"
 excerpt: "A heap-based buffer overflow vulnerability [CWE-122] in FortiOS and FortiProxy SSL-VPN may allow a remote attacker to execute arbitrary code or commands via specifically crafted requests."
 author: Boaz Braaksma
 lead: Ralph Horn
-status: Open
+status: Closed
 researchers:
 - Axel Boesenach
 - Victor Pasman
@@ -42,9 +42,9 @@ versions:
 recommendation: "Upgrade your affected installations to one of the fixed versions listed by Fortinet in their Security Advisory."
 patch_status: Fuly patched
 -workaround: Disable SSL VPN or only allow whitelisted IPs
-status : Open
+status : Closed
 start: 2023-06-09
-end:
+end: 2023-09-26
 timeline:
 - start: 2023-06-09
   end:
@@ -67,6 +67,13 @@ timeline:
 - start: 2023-07-17
   end:
   event: "First version of this casefile"
+- start: 2023-08-07
+  end:
+  event: "First Mailrun."
+- start: 2023-09-26
+  end:
+  event: "Case closed after monitoring phase."
+ips:242047
 ---
 
 ## Summary
