--- a/_cases/2023/DIVD-2023-00025.md
+++ b/_cases/2023/DIVD-2023-00025.md
@@ -15,7 +15,7 @@ cves:
 - CVE-2023-25914
 - CVE-2023-25915
 
-product: "Danfoss AK-SM80A"
+product: "Danfoss AK-SM800A"
 
 recommendation: "It is recommended by Danfoss to install the latest patch with number 3.3."
 start: 2023-01-18
@@ -39,6 +39,9 @@ timeline:
 - start: 2023-08-17
   end:
   event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2023-09-27
+  end:
+  event: "DIVD starts notifying customers with a vulnerable instance."
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
