--- a/_cases/2023/DIVD-2023-00039.md
+++ b/_cases/2023/DIVD-2023-00039.md
@@ -16,7 +16,7 @@ product:
 versions: 
 - All versions
 recommendation: Update vCenter Server to the patched versions provided. These are 8.0U1d or 8.0U2, 6.7U3 and 6.5U3. 
-patch_status: patch unavailable
+patch_status: patch available
 workaround: There is no workaround for this issue.
 status : Open
 start: 2023-10-25
