--- a/_cases/2021/DIVD-2021-00020.md
+++ b/_cases/2021/DIVD-2021-00020.md
@@ -5,7 +5,8 @@ divd: DIVD-2021-00020
 excerpt: "Several serious vulnerabilities were discovered in OSNEXUS QuantaStor. We had difficulties working with the vendor and are now disclosing vulnerabilities and issuing a product warning."
 author: Max van der Horst and Frank Breedijk
 lead: Frank Breedijk
-status: Open
+status: Closed
+ips: n/a
 start: 2021-08-10
 researchers:
 - Wietse Boonstra
@@ -62,7 +63,9 @@ timeline:
 - start : 2023-07-05
   event: CVE-2021-4406 assigned.
 - start : 2023-07-10
-  event: Given the lack of reaction DIVD decides to publish this case file.
+  event: Given the lack of reaction DIVD decides to publish this case file en discloses limited vulnerability details.
+- start: 2023-10-16
+  event: Case closed
 ---
 
 ## Summary
@@ -86,5 +89,7 @@ Based on our [CNA guidelines](/cna) we have given OSNexus ample time to acknowle
 {% include timeline.html %}
 
 ## More information
+* [Limited disclosure](https://csirt.divd.nl/2023/07/10/Limited-disclosure-OSNexus-vulnerabilities/)
 * [WBSec advisories](https://wbsec.nl/writeups/osnexus/)
 * [OSNexus](https://www.osnexus.com)
+
