--- a/_cases/2021/DIVD-2021-00020.md
+++ b/_cases/2021/DIVD-2021-00020.md
@@ -49,11 +49,8 @@ timeline:
 - start: 2022-11-12
   event: OSNexus acknowledges receipt of report.
 - start: 2022-11-12
-  end  : open
-  event: Time to fix CVE-2021-42080 and CVE-2021-42083.
-- start: 2022-11-12
   end  : 2022-11-22
-  event: Time to fix other CVEs.
+  event: Time to fix other CVEs except CVE-2021-42080 and CVE-2021-42083.
 - start: 2022-11-15
   event: OSNexus promises a new release with 7 days that should fix vulnberabilities.
 - start: 2022-11-22
