--- a/_cases/2023/DIVD-2023-00040.md
+++ b/_cases/2023/DIVD-2023-00040.md
@@ -18,7 +18,7 @@ versions:
 - BIG-IP 14.1.0 - 14.1.5
 - BIG-IP 13.1.0 - 13.1.5
 recommendation: "Upgrade your affected versions to one of the hotfixes listed by F5 in their Security Advisory."
-patch_status: Full patched
+patch_status: Patch available
 -workaround:  "Restrict access to the Traffic Management User Interface (TMUI) from the internet."
 status : Open
 start: 2023-10-28
