--- a/_cases/2023/DIVD-2023-00040.md
+++ b/_cases/2023/DIVD-2023-00040.md
@@ -51,7 +51,8 @@ For starters, it is recommended to restrict access to the Configuration Utility 
 DIVD is currently scanning for vulnerable instances connected to the public Internet. Owners of vulnerable systems will receive a notification with instructions to update their system.
 {% include timeline.html %}
 ## More information
-* [CVE-2023-46747](https://nvd.nist.gov/vuln/detail/CVE-2023-46747)
+* {% cve CVE-2023-46747 %}
+
 * [DIVD case CVE-2023-46747](https://csirt.divd.nl/csirt-divd-nl/cases/DIVD-2023-00040/)
 * [F5 Security Advisory](https://my.f5.com/manage/s/article/K000137353)
 * F5 Hotfixe and script, available through [MyF5](https://account.f5.com/myf5)
