--- a/_cases/2023/DIVD-2023-00040.md
+++ b/_cases/2023/DIVD-2023-00040.md
@@ -53,6 +53,7 @@ DIVD is currently scanning for vulnerable instances connected to the public Inte
 ## More information
 * {% cve CVE-2023-46747 %}
 
-* [DIVD case CVE-2023-46747](https://csirt.divd.nl/csirt-divd-nl/cases/DIVD-2023-00040/)
+* [DIVD case CVE-2023-46747](https://csirt.divd.nl/DIVD-2023-00040/)
+
 * [F5 Security Advisory](https://my.f5.com/manage/s/article/K000137353)
 * F5 Hotfixe and script, available through [MyF5](https://account.f5.com/myf5)
