--- a/_cases/2023/DIVD-2023-00040.md
+++ b/_cases/2023/DIVD-2023-00040.md
@@ -49,7 +49,10 @@ On October 26, 2023, F5 released security hotfixes for a critical unauthenticate
 
 ## What you can do
 
-For starters, it is recommended to restrict access to the Configuration Utility to only trusted networks or devices. F5 introduced Hotfixes in order to fix this issue. F5 provided as well a script that works as workaround to mitigate this vulnerability. This script should only be used if you are not able to apply the relevant security hotfix or you are not able to upgrade to a version that has a security hotfix. However, this script CANNOT be used on any BIG-IP versions prior to 14.1.0.
+For starters, it is recommended to restrict access to the Configuration Utility to only trusted networks or devices. This is in best practise that protects against vulnerabilities in this interface, which has historically proven to be a waeks spot.
+
+F5 has released hotfixes that address this vulnerability. F5 also provides a script that works as workaround to mitigate this vulnerability. This script should only be used if you are not able to apply the relevant security hotfix or you are not able to upgrade to a version that has a security hotfix. However, this script CANNOT be used on any BIG-IP versions prior to 14.1.0.
+
 
 ## What we are doing
 
