Fixed typo in DIVD-2023-00042

--- a/_cases/2023/DIVD-2023-00042.md
+++ b/_cases/2023/DIVD-2023-00042.md
@@ -50,7 +50,7 @@ Upgrade to patched versions 7.19.16; 8.3.4; 8.4.4; 8.5.3; 8.6.1:
 ## What we are doing
 ​
 DIVD is currently working to identify vulnerable parties and notify these.
- We do this by scanning for exposed CWP instances and examining this instance to determine whether the vulnerability is present.
+ We do this by scanning for exposed Atlassian Confluence instances and examining this instance to determine whether the vulnerability is present.
  Owners of vulnerable instances receive a notification with the host information and remediation steps.
 ​
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
