Fixed typos in DIVD-2023-00042

--- a/_cases/2023/DIVD-2023-00042.md
+++ b/_cases/2023/DIVD-2023-00042.md
@@ -2,7 +2,7 @@
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: "Confluence improper authorization vulnerability"
-excerpt: "Confluence Data Center and Server allow unauthorized user to set Confluence in setup mode leading to the possibility to create administrator accounts that have the capabilities for RCE"
+excerpt: "Confluence Data Center and Server allow unauthorized users to set Confluence in setup mode leading to the possibility to create administrator accounts that have the capabilities for RCE"
 author: Wessel Baltus
 lead: Wessel Baltus
 researchers:
@@ -15,9 +15,9 @@ product:
 - Confluence Data Center
 - Confluence Server
 versions: 
-- all versions affected
+- all versions prior to 7.19.16, 8.3.4, 8.4.4, 8.5.3, 8.6.1
 recommendation: "Upgrade to patched versions stated on atlassian website"
-patch_status: Full patched
+patch_status: Fully patched
 #workaround: n/a
 status : Open
 start: 2023-11-11
@@ -41,7 +41,7 @@ timeline:
 ---
 ## Summary
 ​
-An improper authorization vulnerability has been identified inside Atlassian Confluence versions before (7.19.16; 8.3.4; 8.4.4; 8.5.3; 8.6.1). this allows an unauthorized used to set the Confluence server in setup-up mode, and using this setup mode create administrator accounts which can be used to facilitate remote code execution" 
+An improper authorization vulnerability has been identified inside Atlassian Confluence versions before (7.19.16; 8.3.4; 8.4.4; 8.5.3; 8.6.1). this allows an unauthorized user to set the Confluence server in setup-up mode, and using this setup mode create administrator accounts which can be used to facilitate remote code execution" 
 ​
 ## What you can do
 ​
@@ -50,7 +50,7 @@ Upgrade to patched versions 7.19.16; 8.3.4; 8.4.4; 8.5.3; 8.6.1:
 ## What we are doing
 ​
 DIVD is currently working to identify vulnerable parties and notify these.
- We do this by scanning for exposed Atlassian Confluence instances and examining this instance to determine whether the vulnerability is present.
+ We do this by scanning for exposed Atlassian Confluence instances and examining these instances to determine whether the vulnerability is present.
  Owners of vulnerable instances receive a notification with the host information and remediation steps.
 ​
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
