--- a/_cases/2023/DIVD-2023-00042.md
+++ b/_cases/2023/DIVD-2023-00042.md
@@ -6,7 +6,7 @@ excerpt: "Confluence Data Center and Server allow unauthorized users to set Conf
 author: Wessel Baltus
 lead: Wessel Baltus
 researchers:
-- Max van der horst
+- Max van der Horst
 - Wessel Baltus
 # You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet).
 cves:
