--- a/_cases/2023/DIVD-2023-00035.md
+++ b/_cases/2023/DIVD-2023-00035.md
@@ -35,6 +35,12 @@ status : Open
 start: 2023-09-11
 end: 
 timeline:
+- start: 2023-11-29
+  end:
+  event: "DIVD started notifying stakeholders"
+- start: 2023-11-28
+  end:
+  event: "DIVD identified vulnerable devices"
 - start: 2023-09-11
   end:
   event: "DIVD starts scanning for this vulnerability."
