--- a/_cases/2023/DIVD-2023-00036.md
+++ b/_cases/2023/DIVD-2023-00036.md
@@ -29,6 +29,12 @@ timeline:
 - start: 2023-09-27
   end:
   event: "First version of this casefile."
+- start: 2023-10-02
+  end:
+  event: "DIVD identified vulnerable devices"
+- start: 2023-10-02
+  end:
+  event: "DIVD started notifying stakeholders"
 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
