--- a/_cases/2023/DIVD-2023-00037.md
+++ b/_cases/2023/DIVD-2023-00037.md
@@ -16,10 +16,13 @@ versions:
 recommendation: Upgrade by installing the issued patch as soon as possible or apply the mentioned workaround.
 patch_status: patches available
 workaround: Enable Browser API Access and disable 'MINIO_BROWSER'
-status : Open
+status: Close
 start: 2023-09-26
 end: 
 timeline:
+- start: 2023-11-30
+  end: 
+  event: Case closed because finding a good fingerprint method failed
 - start: 2023-09-26
   end:
   event: "DIVD starts scanning for this vulnerability."
