--- a/_cases/2023/DIVD-2023-00036.md
+++ b/_cases/2023/DIVD-2023-00036.md
@@ -35,6 +35,9 @@ timeline:
 - start: 2023-10-02
   end:
   event: "DIVD started notifying stakeholders"
+- start: 2023-12-06
+  end:
+  event: "Second round of notifications sent"
 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
