--- a/_cases/2023/DIVD-2023-00036.md
+++ b/_cases/2023/DIVD-2023-00036.md
@@ -16,9 +16,9 @@ versions:
 recommendation: Upgrade by installing the issued patch as soon as possible or apply the provided security patch plugin
 patch_status: patches available
 workaround: Install the JetBrains-provided security patch plugin
-status : Open
+status : Closed
 start: 2023-09-20
-end: 
+end: 2023-12-16
 timeline:
 - start: 2023-09-20
   end:
@@ -38,6 +38,10 @@ timeline:
 - start: 2023-12-06
   end:
   event: "Second round of notifications sent"
+- start: 2023-1216
+  end:
+  event: "Case closed."
+ips: 3605
 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
