--- a/_cases/2023/DIVD-2023-00045.md
+++ b/_cases/2023/DIVD-2023-00045.md
@@ -62,4 +62,4 @@ DIVD is currently working to identify vulnerable parties and notify these.
 ​
 ## More information
 * [Atlassian advisory](https://confluence.atlassian.com/security/cve-2023-22522-rce-vulnerability-in-confluence-data-center-and-confluence-server-1319570362.html)
-* [CVE-2023-22522](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2023-22522)
+* {% cve CVE-2023-22522 %}
