Apply suggestions from code review
Co-authored-by: Frank Breedijk <frank@breedijk.net>

--- a/_cases/2023/DIVD-2023-00042.md
+++ b/_cases/2023/DIVD-2023-00042.md
@@ -58,5 +58,4 @@ DIVD is currently working to identify vulnerable parties and notify these.
 ​
 ​
 ## More information
-* List all resources here
-* https://confluence.atlassian.com/security/cve-2023-22518-improper-authorization-vulnerability-in-confluence-data-center-and-server-1311473907.html
+* [Atlassian advisory](https://confluence.atlassian.com/security/cve-2023-22518-improper-authorization-vulnerability-in-confluence-data-center-and-server-1311473907.html)
