--- a/_cases/2023/DIVD-2023-00036.md
+++ b/_cases/2023/DIVD-2023-00036.md
@@ -38,7 +38,7 @@ timeline:
 - start: 2023-12-06
   end:
   event: "Second round of notifications sent"
-- start: 2023-1216
+- start: 2023-12-16
   end:
   event: "Case closed."
 ips: 3605
