Update case timeline

--- a/_cases/2023/DIVD-2023-00045.md
+++ b/_cases/2023/DIVD-2023-00045.md
@@ -33,9 +33,12 @@ timeline:
 - start: 2023-12-09
   end:
   event: "DIVD created a list of vulnerable Confluence instancess"
-- start: 2022-12-09
+- start: 2023-12-09
   end:
   event: "First version of this case file"
+- start: 2023-12-20
+  end:
+  event: "DIVD identified vulnerable devices" 
 #ips: 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
