Fixt de laatste issue uit pr #689

--- a/_cases/2023/DIVD-2023-00042.md
+++ b/_cases/2023/DIVD-2023-00042.md
@@ -31,7 +31,7 @@ timeline:
   event: "Advisory released by atlassian "
 - start: 2023-11-20
   end:
-  event: "DIVD created a list of vulnerable Confluence instancess"
+  event: "DIVD created a list of vulnerable Confluence instances"
 - start: 2023-11-22
   end:
   event: "First version of this case file"
