Cases closed and filled in IPs notified

--- a/_cases/2023/DIVD-2023-00021.md
+++ b/_cases/2023/DIVD-2023-00021.md
@@ -3,7 +3,7 @@ layout: case
 title: "Multiple vulnerabilities in Danfoss AK-EM 100"
 author: Max van der Horst
 lead: Max van der Horst
-status: Open
+status: Closed
 excerpt: "Danfoss AK-EM 100 has multiple web-related vulnerabilities. It is advised to phase out this product, as this product is End of Life."
 researchers:
 - Jony Schats (HackDefense)
@@ -44,9 +44,14 @@ timeline:
 - start: 2023-05-26
   end:
   event: "DIVD performs first mailrun."
+- start: 2023-12-20
+  end:
+  event: "Case closed."
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
+
+ips: 52
 ---
 
 ## Summary
