--- a/_cases/2023/DIVD-2023-00022.md
+++ b/_cases/2023/DIVD-2023-00022.md
@@ -3,7 +3,7 @@ layout: case
 title: "OS command injection vulnerability of Zyxel firewalls"
 author: Stan Plasmeijer
 lead: Ralph Horn
-status: Open
+status: Closed
 excerpt: "Zyxel has released patches for an OS command injection vulnerability found by TRAPA Security and urges uses to install them for optimal protection."
 researchers:
 - Axel Boesenach
@@ -36,7 +36,15 @@ timeline:
   event: "DIVD starts researching a way to identify Zyxel devices."
 - start: 2023-05-10
   end:
-  event: "DIVD starts scanning the internet for vulnerable instances. "
+  event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2023-05-30
+  end:
+  event: "DIVD starts notifying customers with a vulnerable instance."
+- start: 2023-12-20
+  end:
+  event: "Case closed."
+
+ips: 46701
 ---
 
 ## Summary
