--- a/_cases/2023/DIVD-2023-00025.md
+++ b/_cases/2023/DIVD-2023-00025.md
@@ -3,7 +3,7 @@ layout: case
 title: "Multiple vulnerabilities in Danfoss AK-SM800A"
 author: Max van der Horst
 lead: Max van der Horst
-status: Open
+status: Closed
 excerpt: "Danfoss AK-SM800A has multiple web-related vulnerabilities. It is advised to install the provided patch."
 researchers:
 - Jony Schats (HackDefense)
@@ -42,9 +42,14 @@ timeline:
 - start: 2023-09-27
   end:
   event: "DIVD starts notifying customers with a vulnerable instance."
+- start: 2023-12-20
+  end:
+  event: "Case closed."
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
+
+ips: 1062
 ---
 
 ## Summary
