Closing case DIVD-2023-00011

--- a/_cases/2023/DIVD-2023-00011.md
+++ b/_cases/2023/DIVD-2023-00011.md
@@ -3,7 +3,7 @@ layout: case
 title: "FortiNAC and FortiWeb RCE Vulnerability"
 author: Max van der Horst
 lead: Victor Pasman
-status: Open
+status: Closed
 excerpt: "Fortinet has released security updates for its FortiNAC and FortiWeb products to fix two critical vulnerabilities."
 researchers:
 - Stan Plasmeijer
@@ -37,6 +37,16 @@ timeline:
 - start: 2023-02-21
   end: 
   event: "First version of this casefile."
+- start: 2023-02-23
+  end:
+  event: "DIVD starts researching fingerprint."
+- start: 2023-03-23
+  end:
+  event: "Fingerprint found."
+- start: 2023-12-20
+  end:
+  event: "Case closed."
+ips: 0
 ---
 
 ## Summary
