Mijn plasje over de casefile heen.

--- a/_cases/2024/DIVD-2023-00001.md
+++ b/_cases/2024/DIVD-2023-00001.md
@@ -20,17 +20,17 @@ product:
 - Ivanti Policy Secure
 versions: 
 - All supported versions
-recommendation: "While the patch is under development, apply Ivanti’s mitigation."
+recommendation: "While the patch is under development, apply Ivanti’s mitigation, or take the appliance offline."
 patch_status: Under development
-workaround: Import the mitigation file mitigation.release.20240107.1.xml provided by Ivanti in the download portal.
-status : Open
+workaround: Import the mitigation file mitigation.release.20240107.1.xml provided by Ivanti in the download portal or take the device offline.
+status : Case opened
 start: 2024-01-10
 end: 
 timeline:
 - start: 2024-01-10
   end:
   event: "DIVD receives signals about a vulnerability in Ivanti Pulse Connect and starts fingerprinting."
-- start: 24-01-10
+- start: 2024-01-10
   end:
   event: “Advisory published, DIVD starts scanning for vulnerable instances."
 #ips: 
@@ -38,19 +38,21 @@ timeline:
 # This field becomes mandatory when the case status is set to 'Closed'
 ---
 ## Summary
-​
-An authentication bypass and command injection vulnerability were discovered in Ivanti Connect Secure and Ivanti Policy Secure. Multiple sources report active exploitation by threat actors, making immediate mitigation necessary. By combining these two vulnerabilities, threat actors are able to take complete control of the underlying system. Ivanti does not yet have a patch, which is expected to be released in the week of January 22nd. In the meantime, a mitigation is provided that can be downloaded in the Ivanti download portal. 
-​
+ 
+An authentication bypass and a command injection vulnerability were discovered in Ivanti Connect Secure and Ivanti Policy Secure, it is present in all supported versions. Multiple sources report active exploitation by threat actors, making immediate mitigation necessary. By combining these two vulnerabilities, threat actors are able to take complete control of the underlying system. Ivanti does not yet have a patch, which is expected to be released in the week of January 22nd. In the meantime, a mitigation is provided that can be downloaded in the Ivanti download portal. 
+ 
 ## What you can do
-The patch is expected to be released in the week of January 22nd. Before the release, it is crucial the provided mitigation is applied as soon as possible. The mitigation can be applied by downloading and importing mitigation.release.20240107.1.xml from the Ivanti download portal. Additionally, Volexity (see references) provided detection rules to monitor for exploitation.
+Given that theere is active exploitation, it is crucial the provided mitigation is applied as soon as possible or that the appliance is take offline until mitigations are avilable. It is also recommended to check the appliance for sings of previous exploitation.
+The mitigation can be applied by downloading and importing mitigation.release.20240107.1.xml from the Ivanti download portal. Additionally, Volexity (see references) provided detection rules to monitor for exploitation.
+The patch is expected to be released in the week of January 22nd.
 
 ## What we are doing
-​DIVD is currently working to identify vulnerable instances and notify the owners of these systems. We do this by scanning for exposed Ivanti Connect Secure and Policy Secure instances, and checking the version number to determine whether the vulnerability is present. Owners of vulnerable instances receive a notification with the host information and mitigation steps.
-​
+DIVD is currently working to identify vulnerable instances and notify the owners of these systems. We do this by scanning for exposed Ivanti Connect Secure and Policy Secure instances, and checking the version number to determine whether the vulnerability is present. Owners of vulnerable instances receive a notification with the host information and mitigation steps.
+ 
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
-​
-​
+ 
+ 
 ## More information
 * [Ivanti Publication](https://www.ivanti.com/blog/security-update-for-ivanti-connect-secure-and-ivanti-policy-secure-gateways)
 * [Ivanti Security Advisory](https://forums.ivanti.com/s/article/KB-CVE-2023-46805-Authentication-Bypass-CVE-2024-21887-Command-Injection-for-Ivanti-Connect-Secure-and-Ivanti-Policy-Secure-Gateways?language=en_US)
