--- a/_cases/2024/DIVD-2023-00001.md
+++ b/_cases/2024/DIVD-2023-00001.md
@@ -33,6 +33,9 @@ timeline:
 - start: 2024-01-10
   end:
   event: “Advisory published, DIVD starts scanning for vulnerable instances."
+- start: 2024-01-10
+  end:
+  event: “Case opened, first version of this casefile."
 #ips: 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
