Fixing long title

--- a/_cases/2024/DIVD-2024-00001.md
+++ b/_cases/2024/DIVD-2024-00001.md
@@ -1,6 +1,6 @@
 ---
 layout: case  
-title: "Authentication Bypass and Command Injection in Ivanti Connect Secure and Policy Secure"
+title: "Auth. Bypass and Command Injection in Ivanti VPN appliance"
 excerpt: "Ivanti warns of an authentication bypass and command injection exploited by threat actors in its Connect Secure and Policy Secure products."
 author: Max van der Horst
 lead: Lennaert Oudshoorn
