case update DIVD-2024-00002

--- a/_cases/2024/DIVD-2024-00002.md
+++ b/_cases/2024/DIVD-2024-00002.md
@@ -38,6 +38,9 @@ timeline:
 - start: 2024-01-13
   end:
   event: “Case opened, first version of this casefile."
+- start: 2024-01-15
+  end:
+  event: “DIVD starts notifying customers with a vulnerable instance. "
 #ips: 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
