--- a/_cases/2024/DIVD-2024-00001.md
+++ b/_cases/2024/DIVD-2024-00001.md
@@ -32,13 +32,13 @@ timeline:
   event: "DIVD receives signals about a vulnerability in Ivanti Pulse Connect and starts fingerprinting."
 - start: 2024-01-10
   end:
-  event: “Advisory published, DIVD starts scanning for vulnerable instances. Based on lack of mitigation"
+  event: Advisory published, DIVD starts scanning for vulnerable instances. Based on lack of mitigation
 - start: 2024-01-10
   end:
-  event: “Case opened, first version of this casefile."
+  event: Case opened, first version of this casefile.
 - start: 2024-01-17
   end:
-  event: “Based on the information from Rapid7, DIVD csirt has developed a scanning method and will start scanning for hosts that are vulnerable to the authentication bypass."
+  event: Scanning with new mathod that exploits authentication bypass.
 
 #ips: 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
