--- a/_cases/2024/DIVD-2024-00001.md
+++ b/_cases/2024/DIVD-2024-00001.md
@@ -32,13 +32,13 @@ timeline:
   event: "DIVD receives signals about a vulnerability in Ivanti Pulse Connect and starts fingerprinting."
 - start: 2024-01-10
   end:
-  event: Advisory published, DIVD starts scanning for vulnerable instances. Based on lack of mitigation
+  event: Advisory published, DIVD starts scanning for vulnerable instances. Based on lack of mitigation.
 - start: 2024-01-10
   end:
   event: Case opened, first version of this casefile.
 - start: 2024-01-17
   end:
-  event: Scanning with new mathod that exploits authentication bypass.
+  event: Scanning with new method that exploits authentication bypass.
 
 #ips: 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
@@ -63,7 +63,7 @@ DIVD is currently working to identify vulnerable instances and notify the owners
 * [Ivanti Security Advisory](https://forums.ivanti.com/s/article/KB-CVE-2023-46805-Authentication-Bypass-CVE-2024-21887-Command-Injection-for-Ivanti-Connect-Secure-and-Ivanti-Policy-Secure-Gateways?language=en_US)
 * [Volexity Advice](https://www.volexity.com/blog/2024/01/10/active-exploitation-of-two-zero-day-vulnerabilities-in-ivanti-connect-secure-vpn/) 
 * [BleepingComputer Blogpost](https://www.bleepingcomputer.com/news/security/ivanti-warns-of-connect-secure-zero-days-exploited-in-attacks/)
-* [Detailed writeup by Rapid 7 on AttackerKB](https://attackerkb.com/topics/AdUh6by52K/cve-2023-46805/rapid7-analysis)
+* [Detailed writeup by Rapid7 on AttackerKB](https://attackerkb.com/topics/AdUh6by52K/cve-2023-46805/rapid7-analysis)
 * {% cve CVE-2023-46805 %}
 * {% cve CVE-2024-21887 %}
 
