--- a/_cases/2024/DIVD-2024-00003.md
+++ b/_cases/2024/DIVD-2024-00003.md
@@ -12,10 +12,9 @@ cves:
 product: 
 - CrushFTP
 versions: all versions lower than 10.5.5
-- All supported versions
-recommendation: "While the patch is under development, apply Ivanti’s mitigation, or take the appliance offline."
+recommendation: "Upgrade to patched versions stated on CrushFTP website"
 patch_status: "Patch available"
-workaround:" "Restrict access to the webinterface of CrushFTP."
+workaround: "Restrict access to the webinterface of CrushFTP."
 status : open
 start: 2023-12-13
 end: 
@@ -26,7 +25,7 @@ timeline:
 - start: 2024-01-15
   end:
   event: DIVD identified vulnerable devices
-- start: 2024-01-10
+- start: 2024-01-24
   end:
   event: Case opened, first version of this casefile.
 
@@ -38,7 +37,7 @@ timeline:
 CVE-2023-43177 is a critical vulnerability in CrushFTP. The vulnerability could potentially allow unauthenticated attackers with network access to the CrushFTP Instance to write files in the local file system and eventually in some versions could allow the executing of arbitrary system commands. 
 
 ## What you can do
-Given that there is active exploitation, it is crucial the provided mitigation is applied as soon as possible or that the appliance is take offline until mitigations are available. It is also recommended to check the appliance for signs of previous exploitation. Upgrade CrushFTP to version 10.6.0 or higher. 
+Given that there is active exploitation, it is crucial the provided mitigation is applied as soon as possible. It is also recommended to check the appliance for signs of previous exploitation. Upgrade CrushFTP to version 10.6.0 or higher. 
 
 ## What we are doing
 DIVD has identified vulnerable systems and will notify owners of vulnerable systems. DIVD is also informing trusted information sharing partners for targeted notifications.
