--- a/_cases/2024/DIVD-2024-00005.md
+++ b/_cases/2024/DIVD-2024-00005.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 title: Authentication Bypass in JetBrains TeamCity
-excerpt: "Successful exploitation of CVE-2024-23917 allows an unauthenticated attacker with HTTP(S) access to a TeamCity server to bypass authentication checks and gain administrative control of that TeamCity server."
+excerpt: "A new RCE vulnerability in FortiOS SSL VPN could lead to full compromise of your system."
 author: Max van der Horst
 lead: Ralph Horn
 researchers:
@@ -48,7 +48,7 @@ Fortinet urges users to upgrade to the latest version as soon as possible. If yo
 
 ## What we are doing
 
-DIVD is currently working to identify vulnerable instances and notify the owners of these systems. 
+DIVD is currently working together with Fox IT to identify vulnerable instances and notify the owners of these systems. 
 
 {% comment %}  Leave this here, so we see a timeline {% endcomment %}
 {% include timeline.html %}
