--- a/_cases/2024/DIVD-2024-00005.md
+++ b/_cases/2024/DIVD-2024-00005.md
@@ -5,6 +5,7 @@ excerpt: "A new RCE vulnerability in FortiOS SSL VPN could lead to full compromi
 author: Max van der Horst
 lead: Ralph Horn
 researchers:
+- Researchers Fox-IT
 - Victor Pasman
 - Ralph Horn
 - Max van der Horst
