update case title error

--- a/_cases/2024/DIVD-2024-00005.md
+++ b/_cases/2024/DIVD-2024-00005.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: Authentication Bypass in JetBrains TeamCity
+title: Remote code execution in FortiOS
 excerpt: "A new RCE vulnerability in FortiOS SSL VPN could lead to full compromise of your system."
 author: Max van der Horst
 lead: Ralph Horn
