--- a/_cases/2024/DIVD-2024-00006.md
+++ b/_cases/2024/DIVD-2024-00006.md
@@ -6,10 +6,8 @@ author: Alwin Warringa
 lead: Alwin Warringa
 researchers:
 - Alwin Warringa
-- Axel Boesenach
 - Barre Dijkstra
 - Gerben van de Wiel
-- Martin van Wingerden
 cves:
 - CVE-2024-23917
 product: 
@@ -26,7 +24,16 @@ timeline:
 - start: 2024-02-08
   end:
   event: "DIVD starts researching this vulnerability."
-#ips: 
+- start: 2024-02-13
+  end:
+  event: "DIVD found a good fingerprint method"
+- start: 2024-02-14
+  end:
+  event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-02-16
+  end:
+  event: "DIVD starts notifying customers with a vulnerable instance."
+#ips: 1259
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 
