--- a/_cases/2024/DIVD-2024-00008.md
+++ b/_cases/2024/DIVD-2024-00008.md
@@ -29,6 +29,9 @@ timeline:
 - start: 2024-02-21
   end:
   event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-02-21
+  end:
+  event: "DIVD starts notifying customers with a vulnerable instance."
 #ips: 0
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
