--- a/_cases/2024/DIVD-2024-00006.md
+++ b/_cases/2024/DIVD-2024-00006.md
@@ -32,7 +32,7 @@ timeline:
   event: "DIVD starts scanning the internet for vulnerable instances."
 - start: 2024-02-16
   end:
-  event: "DIVD starts notifying customers with a vulnerable instance."
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network."
 #ips: 1259
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
